# bon

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DESIGN_tactical_steps.md  FIELD_REPORT_content_hash.md  FIELD_REPORT_context_bomb.md  FIELD_REPORT_jq_consumers.md  FIELD_REPORT_quiet_flag.md  GUIDE.md  NOTES.md  ORCHESTRATION.md  README.md  RENAME_PLAN.md  SPEC.md  pyproject.toml
.arc/: archive.jsonl  items.jsonl
.bon/: archive.jsonl  items.jsonl
arc/: SKILL.md
arc/references/: migration.md
bon/: SKILL.md
bon/field-reports/: 2026-02-01-reorganization-friction.md
bon/references/: migration.md
fixtures/: action_tactical_complete.jsonl  action_waiting.jsonl  action_with_scoped_tactical.jsonl  action_with_tactical.jsonl  all_waiting.jsonl  beads_with_orphans.jsonl  done_outcome_with_actions.jsonl  mixed_done_open.jsonl  multi_session_tactical.jsonl  multiple_outcomes.jsonl  outcome_with_actions.jsonl  outcome_with_children.jsonl  single_outcome.jsonl  standalone_actions.jsonl  two_outcomes_no_children.jsonl  waiting_dependency.jsonl
gemini/: gemini-extension.json
gemini/commands/: arc.toml  bon.toml
gemini/skills/arc/: SKILL.md
gemini/skills/bon/: SKILL.md
harness/: README.md  arc-harness.ts
hooks/: arc-tactical.sh  bon-tactical.sh
scripts/: migrate.py
skill/: SKILL.md
skill/field-reports/: 2026-02-01-reorganization-friction.md
src/arc/: cli.py  display.py  ids.py  migrate.py  queries.py  storage.py
src/bon/: cli.py  display.py  ids.py  migrate.py  storage.py
tests/: conftest.py  test_archive.py  test_convert.py  test_done.py  test_edit.py  test_help.py  test_ids.py  test_init.py  test_interactive.py  test_list.py  test_log.py  test_migrate.py  test_migrate_repo.py  test_new.py  test_output_flags.py  test_reopen.py  test_session_tactical.py  test_show.py  test_status.py  test_step.py  test_storage.py  test_unwait.py  test_update.py  test_wait.py  test_work.py
