[project]
name = "arc"
version = "0.1.0"
description = "Lightweight work tracker for Claude-human collaboration"
requires-python = ">=3.11"

[project.scripts]
arc = "arc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
