[project]
name = "arc"
version = "0.3.0"
description = "Lightweight work tracker for Claude-human collaboration"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
arc = "arc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.9.0",
]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # Line length handled separately
    "E402",   # Module import not at top (circular import workarounds)
    "SIM108", # Ternary suggestions (readability preference)
    "SIM117", # Nested with statements (clearer for pytest contexts)
]
